[tool.poetry]
name = "ohnodb"
version = "1.0.1"
description = "A very, very bad database"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vcokltfre/ohnodb"

[tool.poetry.dependencies]
python = "^3.8"
schema = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
